<resources>
    <string name="app_name">Relasia Volunteer</string>
    <!-- Strings related to login -->
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_home">Home</string>
    <string name="title_bookmarks">Bookmarks</string>
    <string name="title_missions">Missions</string>
    <string name="title_profile">Profile</string>
    <string name="mission_photo">Mission\'s Photo</string>
    <string name="mission_title">Mission\'s Title</string>
    <string name="mission_date">Start Date - Finish Date</string>
    <string name="mission_req">Requirements</string>
    <string name="mission_note">Notes</string>
    <string name="mission_cp">Contact</string>
    <string name="loading_data">Loading…</string>
    <string name="error">There is problem. Please try again later.</string>
    <string name="refresh">Refresh</string>
    <string name="title_mission_detail">Mission Detail</string>
    <string name="add_bookmark">Bookmark successfully</string>
    <string name="delete_bookmark">Unbookmark successfully</string>
    <string name="useremail_hint">username@mail.com</string>
    <string name="name_hint">Name</string>
    <string name="birthdate_hint">Birthdate</string>
    <string name="address_hint">Address</string>
    <string name="province_hint">Province</string>
    <string name="phone_hint">No HP</string>
    <string name="save">Save</string>
    <string name="fill_data_foundation">Fill Foundation Data</string>
    <string name="logout">Logout</string>
    <string name="auth">Bearer %1$s</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="message_validation_email">Your email format is not valid</string>
    <string name="message_validation_password">Your password must be at least 6 characters in length</string>
    <string name="tab_text_1">Pending</string>
    <string name="tab_text_2">Rejected</string>
    <string name="tab_text_3">Accepted</string>
    <string name="input_cant_blank">Input field must be not blank</string>
    <string name="city_province">City, Province</string>
    <string name="category">Category</string>
    <string name="_5">5</string>
    <string name="details">Details</string>
    <string name="status">Status</string>
    <string name="image_view">Image View</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="image_button">Image Button</string>
    <string name="missions">Missions</string>
    <string name="missions_could_not_be_loaded">Missions could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_missions_you_applied">No missions you applied</string>
    <string name="back_button">Back Button</string>
    <string name="button_bookmark">Button Bookmark</string>
    <string name="_4_5">4/5</string>
    <string name="fill_requirement">1. First requirement\n2. Second requirement</string>
    <string name="fill_notes">There is something notes</string>
    <string name="fill_phone">No HP (Helpseeker)</string>
    <string name="apply">Apply</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">or</string>
    <string name="gmail_login">Gmail Login</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="register_now">Register Now</string>
    <string name="button_settings">Button Settings</string>
    <string name="no_results_found_for_this_query">No results found for this query</string>
    <string name="hello_volunteer_name">Hello, Volunteer Name</string>
    <string name="quotes">Your move make someone life better</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="example_date">23 Jun 2022</string>
    <string name="example_desc">ID Mission: 112122112</string>
    <string name="your_application_is_successful">Your application is successful</string>
    <string name="approval_will_be_processed_no_later_than_24_hours">Approval will be processed no later than 24 hours</string>
    <string name="back_to_home">Back To Home</string>
    <string name="data_submitted_successfully">Data submitted successfully</string>
    <string name="your_data_will_be_verified_at_least_24_hours">Your data will be verified at least 24 hours</string>
    <string name="welcome_to_relasia">Welcome To Relasia</string>
    <string name="please_fill_your_profile_before_looking_for_missions_to_help_someone">Please fill your profile before looking for missions to help someone</string>
    <string name="fill_profile">Fill Profile</string>
    <string name="relasia">RELASIA</string>
    <string name="let_s_help_someone">Let’s help someone!</string>

    <string-array name="Genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sk_description">*Please submit SK file from your foundation.</string>
    <string name="foundation_data">Foundation Data</string>
    <string name="upload_file">Upload File</string>
    <string name="attach_file_pdf">Attach file PDF</string>

</resources>