<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:background="@drawable/rounded_dialog">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/image_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_success" />

    <TextView
        android:id="@+id/tv_dialog_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:text="@string/example_date"
        android:textAlignment="center"
        android:textColor="@color/blue_munshell"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tv_success_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/example_desc"
        android:paddingHorizontal="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_dialog_time"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_time"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_time" />

    <TextView
        android:id="@+id/tv_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/your_application_is_successful"
        android:paddingHorizontal="16dp"
        android:textAlignment="center"
        android:textColor="@color/blue_munshell"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_success_id"
        app:layout_constraintStart_toStartOf="@+id/tv_success_id"
        app:layout_constraintTop_toBottomOf="@+id/tv_success_id" />

    <TextView
        android:id="@+id/tv_dialog_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/approval_will_be_processed_no_later_than_24_hours"
        android:paddingHorizontal="16dp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_dialog_title"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_dialog_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_regular"
        android:paddingVertical="12dp"
        android:text="@string/back_to_home"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_dialog_desc"
        app:layout_constraintStart_toStartOf="@+id/tv_dialog_desc"
        app:layout_constraintTop_toBottomOf="@id/tv_dialog_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>