<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.missionDetail.MissionDetailFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="99dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/back_button"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:borderWidth="0dp"
                app:elevation="4dp"
                app:fabSize="mini"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/blue_500" />

            <ImageView
                android:id="@+id/iv_detail_mission"
                android:layout_width="match_parent"
                android:layout_height="360dp"
                android:scaleType="fitCenter"
                android:contentDescription="@string/image_view"
                android:src="@drawable/no_image_placeholder"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/lineImg"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@drawable/line_bottom_img"
                android:translationZ="90dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_detail_mission" />

            <TextView
                android:id="@+id/tv_mission_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="32dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/mission_title"
                android:textColor="@color/black_2"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@id/btn_bookmark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lineImg" />

            <TextView
                android:id="@+id/tv_mission_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="@drawable/category_border"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="8dp"
                android:paddingVertical="4dp"
                android:text="@string/category"
                android:textColor="@color/blue_500"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@id/tv_mission_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_title" />

            <ImageButton
                android:id="@+id/btn_bookmark"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:contentDescription="@string/button_bookmark"
                android:layout_marginEnd="32dp"
                android:background="@drawable/ic_outline_bookmark_border_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_mission_title" />

            <ImageButton
                android:id="@+id/btn_unbookmark"
                android:layout_width="42dp"
                android:layout_height="42dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/button_bookmark"
                android:background="@drawable/ic_baseline_bookmark_24"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_mission_title" />

            <TextView
                android:id="@+id/tv_mission_date"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/mission_date"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_mission_title"
                app:layout_constraintStart_toStartOf="@id/tv_mission_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_category"
                app:drawableStartCompat="@drawable/ic_baseline_date_range_24" />

            <TextView
                android:id="@+id/tv_mission_city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="4dp"
                android:gravity="center_vertical"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/city_province"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_mission_title"
                app:layout_constraintStart_toStartOf="@id/tv_mission_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_date"
                app:drawableStartCompat="@drawable/ic_baseline_location_on_24" />

            <ProgressBar
                android:id="@+id/pb_applicant"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:max="5"
                android:progress="4"
                android:progressTint="#209720"
                app:layout_constraintEnd_toStartOf="@id/tv_applicant"
                app:layout_constraintStart_toStartOf="@id/tv_mission_title"
                app:layout_constraintTop_toTopOf="@+id/tv_applicant" />

            <TextView
                android:id="@+id/tv_applicant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:drawablePadding="8dp"
                android:fontFamily="@font/roboto_regular"
                android:gravity="center"
                android:text="@string/_4_5"
                app:layout_constraintEnd_toEndOf="@id/btn_bookmark"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_city"
                app:drawableEndCompat="@drawable/ic_baseline_people_alt_24" />

            <TextView
                android:id="@+id/tv_mission_req_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/mission_req"
                android:textColor="@color/black_2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/tv_applicant"
                app:layout_constraintStart_toStartOf="@id/tv_mission_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_applicant" />

            <TextView
                android:id="@+id/tv_mission_req"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/fill_requirement"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_mission_req_title"
                app:layout_constraintStart_toStartOf="@id/tv_mission_req_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_req_title" />

            <TextView
                android:id="@+id/tv_mission_note_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/mission_note"
                android:textColor="@color/black_2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/tv_applicant"
                app:layout_constraintStart_toStartOf="@id/tv_mission_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_req" />

            <TextView
                android:id="@+id/tv_mission_note"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/fill_notes"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_mission_req_title"
                app:layout_constraintStart_toStartOf="@id/tv_mission_req_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_note_title" />

            <TextView
                android:id="@+id/tv_mission_cp_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/mission_cp"
                android:textColor="@color/black_2"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/tv_applicant"
                app:layout_constraintStart_toStartOf="@id/tv_mission_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_note" />

            <TextView
                android:id="@+id/tv_mission_cp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/fill_phone"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="@id/tv_mission_req_title"
                app:layout_constraintStart_toStartOf="@id/tv_mission_req_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_mission_cp_title" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_apply"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/roboto_bold"
                android:paddingVertical="16dp"
                android:text="@string/apply"
                android:textAllCaps="false"
                app:cornerRadius="12dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/tv_mission_cp_title"
                app:layout_constraintStart_toStartOf="@id/tv_mission_cp_title"
                app:layout_constraintTop_toBottomOf="@id/tv_mission_cp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>