<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/homeFragment">

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.c22ps099.relasiahelperapp.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_loginFragment_to_registerFragment"
            app:destination="@id/registerFragment"/>
        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.c22ps099.relasiahelperapp.ui.register.RegisterFragment"
        android:label="fragment_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_registerFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_registerFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/registerFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.c22ps099.relasiahelperapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="token"
            android:defaultValue=""
            app:argType="string" />
        <argument
            android:name="userId"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_homeFragment_to_profileFragment"
            app:destination="@id/profileFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true"/>
        <action
            android:id="@+id/action_homeFragment_to_bookmarksFragment"
            app:destination="@id/bookmarksFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_homeFragment_to_missionsFragment"
            app:destination="@id/missionsFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_homeFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/bookmarksFragment"
        android:name="com.c22ps099.relasiahelperapp.ui.bookmarks.BookmarksFragment"
        android:label="@string/title_bookmarks"
        tools:layout="@layout/fragment_bookmarks">
        <argument
            android:name="token"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_bookmarksFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/missionsFragment"
        android:name="com.c22ps099.relasiahelperapp.ui.missions.MissionsFragment"
        android:label="@string/title_missions"
        tools:layout="@layout/fragment_missions">
        <argument
            android:name="token"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_missionsFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.c22ps099.relasiahelperapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <argument
            android:name="token"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_profileFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/missionDetailFragment"
        android:name="com.c22ps099.relasiahelperapp.ui.missionDetail.MissionDetailFragment"
        android:label="@string/title_mission_detail"
        tools:layout="@layout/fragment_mission_detail">
        <argument
            android:name="token"
            android:defaultValue=""
            app:argType="string" />
        <action
            android:id="@+id/action_missionDetailFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_missionDetailFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/homeFragment"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>